[tool.poetry]
name = "monkey-programming-lang"
version = "0.1.0"
description = ""
authors = ["Mikko Leppänen <mikko.leppanen@vaisala.com>"]
readme = "README.md"
packages = [{ include = "monkey_programming_lang", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest = "^7.4.2"
ruff = "^0.0.290"
pytest-cov = "^4.1.0"
pyinstrument = "^4.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "W",
    "C4",
    "PIE",
    "RET",
    "SIM",
    "RUF",
    "C90",
    "UP",
    "ERA",
    "ARG",
    "PERF",
]
ignore = ["E501"] # line-too-long

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "E",
    "F",
    "B",
    "W",
    "C4",
    "PIE",
    "RET",
    "SIM",
    "RUF",
    "C90",
    "UP",
    "ERA",
    "ARG",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [".git", ".mypy_cache", ".ruff_cache"]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
# basic
python_version = "3.11"
pretty = true

# be strict(ish)
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true

# warnings
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  ".","src/"
]
testpaths = [
    "tests",
]
